[package]
name = "netscape-cookie"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Netscape HTTP Cookie File parser"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/netscape-cookie"
homepage = "https://github.com/bk-rs/netscape-cookie"
documentation = "https://docs.rs/netscape-cookie"
keywords = []
categories = []
readme = "README.md"

[features]
feature-cookie = ["cookie", "time"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = [] }

cookie = { version = "0.14", default-features = false, features = [], optional = true }
time = { version = "0.2", default-features = false, features = [], optional = true }

[dev-dependencies]
curl = "0.4"
tempfile = "3.1"

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
